--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
 
+      - name: Show ruff version
+        run: |
+          ruff --version
+
       - name: Ruff format check
         run: |
           ruff format --check .
@@ -33,4 +37,3 @@ jobs:
       - name: Pytest
         run: |
           pytest
-
