--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,24 +11,32 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install project (dev)
+      - name: Install project + pin tools
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e ".[dev]"
+          # Force the exact ruff version (removes version drift completely)
+          python -m pip install "ruff==0.15.1" "pytest>=8"
+          # Install your project (editable)
+          python -m pip install -e .
 
-      - name: Show ruff version
+      - name: Show versions
         run: |
+          python --version
           ruff --version
+          pytest --version
+          git --version
 
-      - name: Ruff format check
+      - name: Ruff format check (with diff)
         run: |
-          ruff format --check .
+          ruff format --check --diff .
 
       - name: Ruff lint
         run: |
